 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.7:

 - [ZBX-420] added support of log files in screens (Sasha)
 - [ZBX-418] fixed possible server crash while processing macros (Sasha) 
 - [ZBX-370] fixed cpu.c for system.cpu.load[] processing (Sasha)

Changes for 1.4.6:

 - [ZBX-404] fixed update of item "Download speed for scenario '...'" (Sasha)
 - [ZBX-389] added escaping in SQL statement in DBupdate_graph (Sasha)
 - [ZBX-286] fixed possible server crash on some platforms (Sasha)
 - [ZBX-272] fixed default link to local interface in *BSD for net.if* items (Sasha)
 - [ZBX-386] fixed possible agent crash in processing of active checks (Sasha)
 - [ZBX-379] added error checking for accept on server side (Sasha) 
 - [ZBX-365] added support of long process names for proc.num and proc.mem, Linux 2.6 (Sasha)
 - [ZBX-78] fixed detection of net-snmp libs (Alexei)
 - [ZBX-351] added support of floating point values w/o zero (.12) (Sasha)
 - [ZBX-348] fixed incorrect processing of large integer values for {ITEM.LASTVALUE} (Alexei)
 - [ZBX-337] added Oracle upgrade scripts (Sasha) 
 - [ZBX-301] fixes some typos (Artem)
 - [ZBX-310] fixes for PGSQL (Artem)
 - [ZBX-336] fixed vtext.php (Artem)

Changes for 1.4.5:

 - [ZBX-295] fixed processing of null values under Oracle. Thanks to Max Lapan. (Sasha)
 - [ZBX-340] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-294,ZBX-296] Oracle related fixes. Thanks to Max Lapan. (Sasha)
 - [ZBX-343] fixed possible hang of server trapper process (Alexei)
 - [ZBX-341] fixed compilation problem under Tru64/OSF (Alexei)
 - [ZBX-322] fixed possible incorrect autodiscovery (Sasha)